fix(Spinner): add negative z-index to spinner loading class

--- a/enriched/src/components/Spinner/Spinner.scss
+++ b/enriched/src/components/Spinner/Spinner.scss
@@ -17,7 +17,7 @@
   transition: opacity .3s;
   &--loading {
     opacity: .1;
-    z-index: -1;
+    z-index: $zindex-negative;
   }
 }
 .spinner-wrapper__content-blocker {
@@ -53,7 +53,7 @@
 }
 
 .spinner__full-screen-layer {
-  background-color: #ffffff;
+  background-color: $color-white;
   opacity: .85;
   top: 0;
   bottom: 0;
